# qwykz

./: .gitignore  .npmignore  AI-PROMPT.md  CODE_OF_CONDUCT.md  LICENSE  PROMPT.md  README.md  SECURITY.md  USAGE.md  fix.js  package.json  run-all-maximized.ts  test-elysia-syntax.ts  test-monorepo.exp  test-monorepo.ts  test-qwykz.sh  test.ts  tsconfig.json
.github/workflows/: ci.yml
docs/: architecture.md  contributing.md  dependency-resolution.md  home.md  template-engine.md
e2e-react/: index.html  package.json
e2e-react/src/: App.tsx
elysia/: package.json
elysia-bug/: package.json
elysia-bug/src/: index.ts
elysia/src/: index.ts
go1/: go.mod
hono/: package.json
hono/src/: index.ts
hono4/: package.json
hono4/backend/: docker-compose.yml  package.json
hono4/frontend/: package.json
meow/: package.json
meow/src/: index.ts
nexttesst11/: package.json
nexttesst11/__tests__/: example.test.ts
nexttesst11/app/: page.tsx
qwykz-tests/test-elysia/: package.json  (+1 more)
qwykz-tests/test-rust/: Cargo.toml  Dockerfile  docker-compose.yml  redis.rs.stub
qwykz-tests/test-rust/src/: main.rs
qwykz-tests/test-rust/src/api/handlers/: auth.rs
qwykz-tests/test-rust/src/db/: models.rs
rust/: Cargo.toml
scripts/: build-bin.ts
src/: cli.ts  generator.ts  index.ts  npm-registry.ts  package-json.ts  package-versions.ts  project-templates.ts  prompts.ts  template-engine.ts  types.ts
test/: package.json
test1/: package.json
tests/: cli.test.ts  e2e.test.ts  full-matrix.test.ts
vault/: THINKING.md
vuetest/: .env.example  index.html  package.json
(+187 files in other folders)
